<resources>
    <string name="app_name">Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="app">应用</string>
    <string name="open_app">打开</string>
    <string name="uninstall_app">卸载</string>
    <string name="properties">属性</string>
    <string name="save_apk">备份安装包</string>
    <string name="share_apk">分享安装包</string>
    <string name="app_detail">应用详情</string>
    <string name="open_in_store">在应用商店中查看</string>
    <string name="targetSdk">targetSdkVersion</string>
    <string name="minSdk">minSdkVersion</string>
    <string name="maxSdk">maxSdkVersion</string>
    <string name="AndroidManifest">清单文件</string>
    <string name="versionCode">versionCode</string>
    <string name="MD5">MD5</string>
    <string name="SHA1">SHA1</string>
    <string name="SHA256">SHA256</string>
    <string name="has_copied">已复制到剪切板</string>
    <string name="current_activity">当前 Activity</string>
    <string name="accessibility_service_description">开启无障碍服务以查看当前 Activity</string>
    <string name="accessibility_service">无障碍服务</string>
    <string name="float_window">显示悬浮窗</string>
    <string name="permission_get">权限申请</string>
    <string name="permission_note">Box 需要申请读写权限以为您进行备份安装包等工作。</string>
    <string name="backup">备份</string>
    <string name="backup_finish">备份完成</string>
    <string name="open_in_other_app">其它应用打开</string>
    <string name="accessibility_note">1. 打开无障碍服务\n\n    Box 通过无障碍服务来获取当前的 Activity 名称。开启无障碍服务需要您的手动确认，Box 保证不会收集任何信息。请在系统弹出的 无障碍 选项中找到 Box，并打开无障碍开关。</string>
    <string name="floatwindow_note">2. 打开悬浮窗\n\n    Box 将在悬浮窗中显示当前 Activity 名称。首次开启悬浮窗，系统将询问 Box 是否可在其他应用上层显示，请打开该选项。\n上面的 显示悬浮窗 开关可以控制悬浮窗的显示和关闭。\n拖动悬浮窗上部边缘可以移动悬浮窗。</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="note">提示</string>
    <string name="delete_apk_note">将删除所有您已备份的 Apk 文件。</string>
    <string name="clear_cache_note">将删除根目录 Box 文件夹下所有文件。</string>
    <string name="license">开源协议</string>
    <string name="source_url">源代码地址</string>
    <string name="third_lib">第三方库</string>
    <string name="developer">开发者</string>
    <string name="send_email">发邮件</string>
    <string name="open_issue">提issue</string>
    <string name="sendto">mailto:sunluyao1993x@gmail.com</string>
    <string name="mail_topic">Box Feedback</string>
    <string name="device_model">Device Model :</string>
    <string name="sdk_version">Sdk Version :</string>
    <string name="version">App Version :</string>
    <string name="device_ifo">设备信息</string>
    <string name="brand">品牌</string>
    <string name="display">版本号</string>
    <string name="product">型号</string>
    <string name="device">设备名称</string>
    <string name="board">主板</string>
    <string name="model">Model</string>
    <string name="manufacturer">制造商</string>
    <string name="bootloader">Bootloader</string>
    <string name="hardware">Hardware</string>
    <string name="abis">ABIs</string>
    <string name="radio_version">Radio</string>
    <string name="api">Api</string>
    <string name="android_version">Android 版本</string>
    <string name="sdk">SDK 版本</string>
    <string name="os_version">Base Os</string>
    <string name="kernel_version">Kernel</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="sn">SN</string>
    <string name="mac_address">Mac Address</string>
    <string name="screen">屏幕</string>
    <string name="ram">内存</string>
    <string name="rom">存储</string>
    <string name="open_logcat">查看 Logcat</string>
    <string name="cut">剪切</string>
    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="rename">重命名</string>
    <string name="encrypt">加密</string>
    <string name="property">属性</string>
    <string name="paste">粘贴</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="name">名称</string>
    <string name="calculating">正在计算...</string>
    <string name="location">路径</string>
    <string name="size_capitalized">大小</string>
    <string name="date">日期</string>
    <string name="md5">MD5</string>
    <string name="hash_sha256">SHA-256</string>
    <string name="file">文件</string>
    <string name="folder">文件夹</string>
    <string name="reverse">反编译</string>
    <string name="goto_reverse_folder">查看反编译目录</string>
    <string name="is_reversing_please_wait">正在反编译，请稍候...</string>

</resources>
